cot-cli/tests/snapshot_testing/help/snapshots/cli__snapshot_testing__help__external__custom_task_help_shows_reconstructed_args.snap
---
source: cot-cli/tests/snapshot_testing/help/external.rs
info:
  program: cot
  args:
    - "--build"
    - frobnicate
    - "--help"
---
success: true
exit_code: 0
----- stdout -----
Frobnicates the target

Usage: cot frobnicate [OPTIONS] <target>

Arguments:
  <target>  What to frobnicate

Options:
      --intensity <intensity>  How hard to frobnicate
      --build                  Simulated flag colliding with cot-cli's own --build
  -h, --help                   Print help

----- stderr -----
