cot-cli/tests/snapshot_testing/help/snapshots/cli__snapshot_testing__help__external__migration_unknown_subcommand_fails_cleanly.snap
---
source: cot-cli/tests/snapshot_testing/help/external.rs
info:
  program: cot
  args:
    - "--build"
    - migration
    - unknown
    - "--help"
---
success: true
exit_code: 0
----- stdout -----
Manage migrations for a Cot project

Usage: cot migration <COMMAND>

Commands:
  list      List all migrations for a Cot project
  make      Generate migrations for a Cot project
  new       Create a new empty migration
  rollback  Rollback migrations up to the specified migration file
  graph     Export the migration dependency graph for visualization
  help      Print this message or the help of the given subcommand(s)

Options:
  -h, --help  Print help

----- stderr -----
